# CAPITAL-Engine

./: .gitignore  CAPITAL-engine.sln  CAPITAL-engine.vcxproj  CAPITAL-engine.vcxproj.filters  CMakeLists.txt  Capital_Engine.cpp  LICENSE  README.md  Settings.h  imgui.ini
enc_temp_folder/63f6fc8961cc5ed16699a9c83219bc3e/: Mechanics.cpp
shaders/: compile_shaders.bat  compile_shaders.sh  shader.comp  shader.frag  shader.vert
src/: ALL_CLASSES.h  CAPITAL-engine.vcxproj  CAPITAL-engine.vcxproj.filters  CapitalEngine.cpp  CapitalEngine.h  Capital_Engine.cpp  Capital_Engine.h  Control.cpp  Control.h  Debug.cpp  Debug.h  Library.cpp  Library.h  Mechanics.cpp  Mechanics.h  Memory.cpp  Memory.h  MemoryCommands.cpp  MemoryCommands.h  Pipelines.cpp  Pipelines.h  Settings.h  Subscriber.cpp  Subscriber.h  TODO.h  Tools.h  Vulkan_Debug.cpp  Vulkan_Debug.h  Vulkan_Mechanics.cpp  Vulkan_Mechanics.h  Window.cpp  Window.h  World.cpp  World.h  log.txt  log_format.txt  main.cpp  subscriber.cpp  subscriber.h
src/gui/: gui_capital_engine  imgui.ini  main_gui.cpp
src/shaders/: compile_shaders.bat  shader.comp  shader.frag  shader.vert
src/x64/Debug/: CAPITAL-engine.exe.recipe  CAPITAL-engine.ilk  vc143.idb
src/x64/Debug/CAPITAL-engine.tlog/: CAPITAL-engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
srcGUI/: README.md
srcGUI/gui/: Makefile  gui_capital_engine  imgui.ini  main_gui.cpp  publisher.cpp  publisher.h
srcGUI/imgui/: imgui_demo.cpp
